# gli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/gli-agent/: Cargo.toml
crates/gli-agent/src/: lib.rs
crates/gli-cli/: Cargo.toml
crates/gli-cli/src/: lockout.rs  main.rs  render.rs
crates/gli-core/: Cargo.toml
crates/gli-core/src/: catalog.rs  config.rs  fs.rs  lib.rs  platform.rs  recipes.rs
crates/gli-modules/: Cargo.toml
crates/gli-modules/src/: app.rs  caddy.rs  common.rs  docker.rs  fail2ban.rs  firewall.rs  lib.rs  monitoring.rs  postgres.rs  redis.rs  ssh.rs  system.rs  tailscale.rs  updates.rs  users.rs
crates/gli-modules/tests/: app_apply.rs  caddy_apply.rs  databases_apply.rs  docker_apply.rs  fail2ban_apply.rs  firewall_apply.rs  monitoring_apply.rs  ssh_apply.rs  system_apply.rs  uninstall.rs  updates_apply.rs  users_apply.rs
crates/gli-state/: Cargo.toml
crates/gli-state/src/: lib.rs
crates/gli-tui/: Cargo.toml
crates/gli-tui/src/: app.rs  lib.rs  ui.rs
crates/vpsguard-agent/: Cargo.toml
crates/vpsguard-agent/src/: lib.rs
crates/vpsguard-cli/: Cargo.toml
crates/vpsguard-cli/src/: lockout.rs  main.rs  render.rs
crates/vpsguard-core/: Cargo.toml
crates/vpsguard-core/src/: config.rs  context.rs  error.rs  inventory.rs  lib.rs  module.rs  recipes.rs  runner.rs  types.rs
crates/vpsguard-modules/: Cargo.toml
crates/vpsguard-modules/src/: app.rs  caddy.rs  common.rs  docker.rs  fail2ban.rs  firewall.rs  lib.rs  monitoring.rs  postgres.rs  redis.rs  ssh.rs  system.rs  tailscale.rs  updates.rs  users.rs
crates/vpsguard-modules/tests/: app_apply.rs  caddy_apply.rs  databases_apply.rs  docker_apply.rs  fail2ban_apply.rs  firewall_apply.rs  monitoring_apply.rs  ssh_apply.rs  system_apply.rs  uninstall.rs  updates_apply.rs  users_apply.rs
crates/vpsguard-state/: Cargo.toml
crates/vpsguard-state/src/: lib.rs
crates/vpsguard-tui/: Cargo.toml
crates/vpsguard-tui/src/: app.rs  lib.rs  ui.rs
docs/: README.md  demo.tape
examples/configs/: gli.toml  inventory.toml  vpsguard.toml
