[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0-rc.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/KodjoTouglo/gli"
authors = ["Kodjo Michel TOUGLO"]
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
gli-core = { path = "crates/gli-core" }
gli-modules = { path = "crates/gli-modules" }
gli-state = { path = "crates/gli-state" }
gli-tui = { path = "crates/gli-tui" }
gli-agent = { path = "crates/gli-agent" }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "sync", "time"] }
async-trait = "0.1"

# Config / serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
inquire = "0.7"

# State
rusqlite = { version = "0.32", features = ["bundled"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

# Errors / logging
thiserror = "2"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
