[package]
name = "gli-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Command-line interface for gli."

[[bin]]
name = "gli"
path = "src/main.rs"

[dependencies]
gli-core.workspace = true
gli-modules.workspace = true
gli-state.workspace = true
gli-tui.workspace = true
gli-agent.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "process",
    "io-util",
    "io-std",
] }
clap.workspace = true
inquire.workspace = true
serde_json.workspace = true
futures.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
