[package]
name = "gli-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core traits and types for gli (Module, Context, Status, Change, Report)."

[dependencies]
async-trait.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "fs"] }
tempfile = "3"
