[package]
name = "vpsguard-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Agentless remote execution over SSH (russh) for vpsguard."

[dependencies]
vpsguard-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util"] }
tracing.workspace = true
thiserror.workspace = true
russh = "0.45"
base64 = "0.22"
