[package]
name = "vpsguard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Command-line interface for vpsguard."

[[bin]]
name = "vpsguard"
path = "src/main.rs"

[dependencies]
vpsguard-core.workspace = true
vpsguard-modules.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
