[package]
name = "vpsguard-state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Local SQLite history of vpsguard apply/rollback events."

[dependencies]
rusqlite.workspace = true
thiserror.workspace = true
