[package]
name = "vpsguard-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Interactive ratatui front-end for vpsguard (Phase 2)."

[dependencies]
vpsguard-core.workspace = true
