[package]
name = "vpsguard-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Interactive ratatui front-end for vpsguard."

[dependencies]
vpsguard-core.workspace = true
vpsguard-modules.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
